--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "^51.0.8",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.9",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-safe-area-context": "^4.10.3",
+    "react-native": "^0.74.1",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
